--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="page">
         Testing...
 
-        <header class="site_header">
+        <header class="header">
             <nav class="nav"> 
 
                 <img
@@ -79,9 +79,9 @@
 
             </section>
 
-            <selection class="about">
+            <section class="about">
 
-            </selection>
+            </section>
 
         </main>
 
