--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="icon" href="favicon.ico">
 <head>
     <title>Kyle's Coffeeshop</title>
     <meta charset="UTF-8">
@@ -8,8 +7,9 @@
     <meta name="author" content="Kyle J. Washington">
     <meta name="description" content="Kyle's Coffeeshop Store Project Sprint2 (101010)">
     <meta name="keywords" content="Kyle J. Washington, Coffee, Coffeeshop, Caffein, Joe, Brew" >
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="index.css"> 
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="vendor\normalize.css">
+    <link rel="stylesheet" href="pages\index.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap" rel="stylesheet">
